--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ exclude: ["README.md"] # files to exclude
 highlighter: rouge
 markdown: kramdown
 disqus: yulin-github-pages
-#google_analytics: dbyll
+google_analytics: UA-108154124-1
 title: Yulin's Personal Blog
 
 defaults:
